Update UniParcEntryLight model